2010-01-14 Borut Razem <borut.razem AT siol.net>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.lex, doc/sdccman.lyx,
	  device/include/mcs51/mcs51reg.h,
	  support/regression/tests/bug2817646.c,
	  support/regression/tests/driverstruct.c,
	  support/regression/tests/nullstring.c,
	  support/regression/tests/bug1546986.c,
	  support/regression/tests/bug-1981238.c,
	  support/regression/tests/array.c,
	  support/regression/tests/bug-1699804.c,
	  support/regression/tests/bug-221100.c,
	  support/regression/tests/bug1839277.c,
	  support/regression/tests/bug-460010.c,
	  support/regression/tests/bug1921073.c,
	  support/regression/tests/bug1839321.c,
	  support/regression/tests/float.c,
	  support/regression/tests/simplefloat.c,
	  support/regression/tests/bug2783061.c,
	  support/regression/tests/critical.c,
	  support/regression/tests/bug1551947.c,
	  support/regression/tests/bug663539.c,
	  support/regression/tests/absolute.c,
	  support/regression/tests/bug-221168.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1348008.c,
	  support/regression/tests/bug1928022.c,
	  support/regression/tests/bug1938300.c,
	  support/regression/tests/bug-880197.c,
	  support/regression/tests/bug1536762.c,
	  support/regression/tests/bug1198642.c,
	  support/regression/tests/bug1749275.c,
	  support/regression/tests/bitopcse.c,
	  support/regression/tests/bug1535242.c,
	  support/regression/tests/bug-868103.c,
	  support/regression/tests/using.c,
	  support/regression/tests/bug1723128.c,
	  support/regression/tests/bug1750318.c,
	  support/regression/tests/bug1409955.c,
	  support/regression/tests/bug1856409.c,
	  support/regression/tests/regtrack.c,
	  support/regression/tests/setjmp.c,
	  support/regression/tests/bug1618050.c,
	  support/regression/tests/float_single.c,
	  support/regression/tests/malloc.c,
	  support/regression/tests/bug-524691.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/bug2761883.c,