@@ -1,3 +1,8 @@
+2010-01-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/gbz80/string.c:
+	  Removed unused gbz80-specific string routines.
+
 2010-01-14 Borut Razem <borut.razem AT siol.net>
 
 	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.lex, doc/sdccman.lyx,
